Add contribute links

--- a/www/view/layout.html
+++ b/www/view/layout.html
@@ -33,7 +33,8 @@
 			</div>
 
 			<div class="corpo">
-				&copy;::currentYear:: <a href="http://haxe.org/foundation/">Haxe Foundation</a>
+				<a href="::editLink::">Contribute to this page using Github</a>.
+				&copy;::currentYear:: <a href="http://haxe.org/foundation/">Haxe Foundation</a>.
 			</div>
 
 		</div>
