--- a/www/css/style.css
+++ b/www/css/style.css
@@ -294,19 +294,19 @@ form.search {
 
 /* external link */
 a.urlextern{
-	background: transparent url(images/link_icon.gif) 0px 1px no-repeat;
+	background: transparent url(/img/link_icon.gif) 0px 1px no-repeat;
 	padding: 1px 0px 1px 16px;
 }
 
 /* windows share */
 a.windows{
-	background: transparent url(images/windows.gif) 0px 1px no-repeat;
+	background: transparent url(/img/windows.gif) 0px 1px no-repeat;
 	padding: 1px 0px 1px 16px;
 }
 
 /* interwiki link */
 a.interwiki{
-  	background: transparent url(images/interwiki.png) 0px 1px no-repeat;
+  	background: transparent url(/img/interwiki.png) 0px 1px no-repeat;
 	padding-left: 16px;
 	color:#436976;
 	text-decoration:none;
@@ -328,7 +328,7 @@ a.media:hover {
 }
 										/* email link */
 a.mail {
-	background: transparent url(images/mail_icon.gif) 0px 1px no-repeat;
+	background: transparent url(/img/mail_icon.gif) 0px 1px no-repeat;
 	padding: 1px 0px 1px 16px;
 	color:#436976;
 	text-decoration:none;
@@ -396,7 +396,7 @@ ul.toc {
 }
 
 ul.toc li {
-	background: transparent url(images/tocdot2.gif) 0 0.6em no-repeat;
+	background: transparent url(/img/tocdot2.gif) 0 0.6em no-repeat;
 	padding-left:0.4em;
 }
 
@@ -408,46 +408,3 @@ ul.toc li.clear {
 
 
 div.clearer {clear: both; line-height: 0; height: 0;}
-
-div.error{
-  background: #ff6666 url(../images/error.png) 0.5em 0px no-repeat;
-  font-size: 90%;
-  margin: 0px;
-  padding-left: 3em;
-}
-
-div.info{
-  background: #ffff66 url(../images/info.png) 0.5em 0px no-repeat;
-  font-size: 90%;
-  margin: 0;
-  padding-left: 3em;
-}
-
-div.success{
-  background: #66ff66 url(../images/thumbup.gif) 0.5em 0px no-repeat;
-  font-size: 90%;
-  margin: 0;
-  padding-left: 3em;
-}
-
-/* syntax highlighting code */
-.code .br0	{ color: #66cc66; }
-.code .co1	{ color: #808080; font-style: italic; }
-.code .co2	{ color: #808080; font-style: italic; }
-.code .coMULTI	{ color: #808080; font-style: italic; }
-.code .es0	{ color: #000099; font-weight: bold; }
-.code .kw1	{ color: #b1b100; }
-.code .kw2	{ color: #000000; font-weight: bold; }
-.code .kw3	{ color: #000066; }
-.code .kw4	{ color: #993333; }
-.code .kw5	{ color: #0000ff; }
-.code .me0	{ color: #006600; }
-.code .nu0	{ color: #cc66cc; }
-.code .re0	{ color: #0000ff; }
-.code .re1	{ color: #0000ff; }
-.code .re2	{ color: #0000ff; }
-.code .re4	{ color: #009999; }
-.code .sc0	{ color: #00bbdd; }
-.code .sc1	{ color: #ddbb00; }
-.code .sc2	{ color: #009900; }
-.code .st0	{ color: #ff0000; }
