--- a/www/view/layout.html
+++ b/www/view/layout.html
@@ -34,7 +34,8 @@
 
 			<div class="corpo">
 				<a href="::editLink::">Contribute to this page using Github</a>.
-				&copy;::currentYear:: <a href="http://haxe.org/foundation/">Haxe Foundation</a>.
+				| <a href="/sitemap/">View Sitemap</a>.
+				| &copy;::currentYear:: <a href="http://haxe.org/foundation/">Haxe Foundation</a>.
 			</div>
 
 		</div>
