Update the data-attributes for PartialViewResult

--- a/www/view/layout.html
+++ b/www/view/layout.html
@@ -9,13 +9,13 @@
 		<link rel="stylesheet" media="screen" type="text/css" href="/css/style.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="/css/code-highlight.css"/>
 	</head>
-	<body data-layout="neko">
+	<body data-uf-layout="neko">
 		<div class="center">
 
 			<div class="siteHeader">
 				<div class="siteBanner">
 					<div class="bannerContent">
-						<ul class="siteMenu" data-partial="menu">
+						<ul class="siteMenu" data-uf-partial="menu">
 							<li><a href="/" rel="pushstate">home</a></li>
 							<li><a href="/news" rel="pushstate">news</a></li>
 							<li><a href="/download" rel="pushstate">downloads</a></li>
@@ -27,7 +27,7 @@
 			</div>
 
 			<div class="siteBox">
-				<div class="siteContent" data-partial="content">
+				<div class="siteContent" data-uf-partial="content">
 					::viewContent::
 				</div>
 			</div>
