--- a/www/view/layout.html
+++ b/www/view/layout.html
@@ -3,27 +3,29 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
 	<head>
 		<title>::title:: - NekoVM</title>
-		<meta name="date" content="2014-12-03T13:04:37+0100" />
+		<meta name="date" content="2016-01-01T12:00:05+0100" />
 		<meta name="robots" content="index,follow" />
 		<link rel="shortcut icon" href="/favicon.ico" />
-		<link rel="stylesheet" media="screen" type="text/css" href="/css/style.css"/>
+		<link rel="stylesheet" media="screen" type="text/css" href="/css/style.min.css"/>
+		<link rel="stylesheet" media="screen" type="text/css" href="/css/haxe-nav.min.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="/css/code-highlight.css"/>
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic" />
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,600,600italic,400' rel='stylesheet' type='text/css'>
 	</head>
 	<body data-uf-layout="neko">
-		<div class="center">
-			<div class="siteHeader">
-				<a href="/" title="NekoVM home"><img src="/img/nekovm-logo.png" alt="NekoVM logo"/></a>
-			</div>
 			<nav>
 				<ul class="siteMenu" data-uf-partial="menu">
 					<li><a href="/" rel="pushstate">Home</a></li>
 					<li><a href="/news" rel="pushstate">News</a></li>
 					<li><a href="/download" rel="pushstate">Downloads</a></li>
 					<li><a href="/doc" rel="pushstate">Documentation</a></li>
+					<li><a href="/ml" rel="pushstate">Contact</a></li>
 				</ul>
 			</nav>
+		<div class="center">
+			<div class="siteHeader">
+				<a href="/" title="NekoVM home"><img src="/img/nekovm-logo.png" alt="NekoVM logo"/></a>
+			</div>
 			<div class="container">
 				::viewContent::
 			</div>
