Disable the pushstate ajax loading function because it doesn't work with ufront 2.0 + ufront-client 2.0.

--- a/www/view/layout.html
+++ b/www/view/layout.html
@@ -43,6 +43,8 @@
 		<script src="/js/code-highlight.js"></script>
 		<script>hljs.registerLanguage( "neko", function() { return hljs.getLanguage("js"); } );</script>
 		<script>hljs.initHighlightingOnLoad();</script>
+		<!-- Disable the pushstate ajax loading function because it doesn't work with ufront 2.0 + ufront-client 2.0.
 		<script src="/js/client.js"></script>
+		-->
 	</body>
 </html>
