news is now called releases.
since updates from 2013 aren't really news.

--- a/www/view/layout.html
+++ b/www/view/layout.html
@@ -7,7 +7,6 @@
 		<meta name="robots" content="index,follow" />
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="stylesheet" media="screen" type="text/css" href="/css/style.min.css"/>
-		<link rel="stylesheet" media="screen" type="text/css" href="/css/haxe-nav.min.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="/css/code-highlight.css"/>
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic" />
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,600,600italic,400' rel='stylesheet' type='text/css'>
@@ -16,7 +15,7 @@
 			<nav>
 				<ul class="siteMenu" data-uf-partial="menu">
 					<li><a href="/" rel="pushstate">Home</a></li>
-					<li><a href="/news" rel="pushstate">News</a></li>
+					<li><a href="/news" rel="pushstate">Releases</a></li>
 					<li><a href="/download" rel="pushstate">Downloads</a></li>
 					<li><a href="/doc" rel="pushstate">Documentation</a></li>
 					<li><a href="/ml" rel="pushstate">Contact</a></li>
@@ -32,8 +31,8 @@
 
 			<div class="corpo">
 				<a href="https://github.com/haxefoundation/neko/issues">Report an issue</a> |
-				<a href="::editLink::">Contribute to this page</a> |
-				<a href="/sitemap/" rel="pushstate">Sitemap</a>
+				<a href="::editLink::">Contribute to this page</a> 
+				<!-- | <a href="/sitemap/" rel="pushstate">Sitemap</a-->
 				<br><br> &copy;::currentYear:: <a href="http://haxe.org/foundation/">Haxe Foundation</a>
 			</div>
 
