--- a/views/Documentation.html
+++ b/views/Documentation.html
@@ -8,7 +8,7 @@
 					<li><a href="/doc/ffi/">C FFI</a> (Foreign Function Interface)</li>
 					<li><a href="/doc/vm/">Virtual Machine Documentation</a></li>
 					<li><a href="/doc/mod_neko/">Mod_neko</a></li>
-					<li><a href="/doc/misc/multilang/">Languages Interoperability</a></li>
+					<li><a href="/doc/multilang/">Languages Interoperability</a></li>
 					<li><a href="/doc/nekoml/">NekoML</a></li>
 					<li><a href="/doc/nxml/">NXML</a></li>
 					<li><a href="/doc/mt/">Neko and  Multithreading</a></li>
