--- a/views/Layout.html
+++ b/views/Layout.html
@@ -12,6 +12,20 @@
 		<link rel="canonical" href="::canonical::"/>
 	</head>
 	<body>
+			<!--
+				Force redirect to the right origin.
+				It is needed to redirect `path` to `path/` with the correct domain name.
+				See the "Caveats" section of http://strd6.com/2016/02/github-pages-custom-domain-with-ssltls/.
+			-->
+			<script type="text/javascript">
+				function startsWith(str, searchString){
+					return str.substr(0, searchString.length) === searchString;
+				}
+				if (!startsWith(location.href, "::canonical::")) {
+					window.location.replace("::canonical::");
+				}
+			</script>
+
 			<nav>
 				<ul class="siteMenu">
 					<li><a href="/">Home</a></li>
