--- a/views/Layout.html
+++ b/views/Layout.html
@@ -50,7 +50,7 @@
 
 			<div class="corpo">
 				<p>&copy; ::currentYear::
-				<a href="/foundation/" title="Haxe Foundation Website" class="hf-link">Haxe Foundation</a>
+				<a href="https://haxe.org/foundation/" title="Haxe Foundation Website" class="hf-link">Haxe Foundation</a>
 				::if (editLink != null)::
 				| <a href="::editLink::" target="_blank" rel="external" class="edit-link" title="Use Github to suggest an edit to this page">Contribute to this page</a>
 				::end::
