deploy for 7741e09f4eb62dc009a4d5693e552a749826c827

--- a/doc/view/mysql/index.html
+++ b/doc/view/mysql/index.html
@@ -9,22 +9,8 @@
 		<link rel="stylesheet" media="screen" type="text/css" href="/css/code-highlight.css"/>
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic" />
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,600,600italic,400" />
-		<link rel="canonical" href="https://nekovm.org/doc/view/mysql/"/></head>
+		</head>
 	<body>
-		
-		<!--
-			Force redirect to the right origin.
-			It is needed to redirect `path` to `path/` with the correct domain name.
-			See the "Caveats" section of http://strd6.com/2016/02/github-pages-custom-domain-with-ssltls/.
-		-->
-		<script type="text/javascript">
-			function startsWith(str, searchString){
-				return str.substr(0, searchString.length) === searchString;
-			}
-			if (!startsWith(location.href, "https://nekovm.org/doc/view/mysql/")) {
-				window.location.replace("https://nekovm.org/doc/view/mysql/");
-			}
-		</script>
 		<nav>
 			<ul class="siteMenu">
 				<li><a href="/">Home</a></li>
@@ -140,7 +126,7 @@
 			</div>
 
 			<div class="corpo">
-				<p>&copy; 2019
+				<p>&copy; 
 				<a href="https://haxe.org/foundation/" title="Haxe Foundation Website" class="hf-link">Haxe Foundation</a>
 				
 				| <a href="https://github.com/HaxeFoundation/nekovm.org/tree/master/pages/doc/view/mysql.xml" target="_blank" rel="external" class="edit-link" title="Use Github to suggest an edit to this page">Contribute to this page</a>
